Removed MaxPermSize and documented new Maven version